# elin

./: .gitattributes  .gitignore  .rta_project.json  404.html  LICENSE  README.md  index.html  memory_management_plan.md  mkdocs.yml  sitemap.xml  test.outz  test_output.txt
changelog/: index.html
compiler/: array_ops.elin  asm.py  ast_nodes.py  compiler.py  complex_test.elin  expression_parser.py  lexer.py  logic_flow.elin  main.py  main.zig  new_ops.elin  ops.py  parser.py  pkg.py  plan.md  stack_ops.elin  test.elin  test.outz
docs/: changelog.md  index.md  roadmap.md  visualizer.md
docs/conditionals/: index.html
docs/debug/: index.html
docs/docs/: conditionals.md  debug.md  file-io.md  functions.md  introduction.md  io.md  loops.md  math.md  opcodes.md  packages.md  random.md  setup.md  stack-logic.md  stack-ops.md  string-ops.md  (+3 more)
elin-hs/: CHANGELOG.md  elin-hs.cabal
executor/: elin_vm  main.cpp  porting_plan.md
javascripts/: visualizer.js
roadmap/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
stylesheets/: extra.css
tests/: array_ops.outz  complex_test.outz  file_io_test.elin  file_io_test.outz  fold_test.elin  fold_test.outz  logic_flow.outz  math_stress.elin  math_stress.outz  mod_abs_test.elin  mod_abs_test.outz  new_ops.outz  read_test.elin  read_test.outz  stack_ops.outz  string_io_test.elin  string_io_test.outz  test.elin  test.outz  time_test.elin  time_test.outz
visualizer/: index.html
website/: changes.html  docs.html  index.html  roadmap.html  roadmap.md  robots.txt  style.css  visualizer.html  vm.js
(+30 files in other folders)
