cabal-version:   3.0
name:            elin-hs
version:         0.1.0.0
license:         NONE
author:          schallten
maintainer:      166111488+schallten@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable elin-hs
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        megaparsec,
        parser-combinators,
        mtl,
        text
    hs-source-dirs:   app
    default-language: Haskell2010
